// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenuItem renders 1`] = `
.emotion-0 {
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 8px;
  padding-top: 8px;
  display: inline-block;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
>
  item content content
</div>
`;

exports[`DropdownMenuItem renders active 1`] = `
.emotion-0 {
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 8px;
  padding-top: 8px;
  display: inline-block;
  background-color: var(--themeBgHover,#F7F8F9);
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
>
  item content content
</div>
`;

exports[`DropdownMenuItem renders active and selected 1`] = `
.emotion-0 {
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 8px;
  padding-top: 8px;
  display: inline-block;
  background-color: var(--themeBgHover,#F7F8F9);
  background-color: var(--themeBgSelected,#7D58FF);
  color: #FFFFFF;
  background-color: #704fe5;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
>
  item content content
</div>
`;

exports[`DropdownMenuItem renders disabled 1`] = `
.emotion-0 {
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 8px;
  padding-top: 8px;
  display: inline-block;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
>
  item content content
</div>
`;

exports[`DropdownMenuItem renders selected 1`] = `
.emotion-0 {
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 8px;
  padding-top: 8px;
  display: inline-block;
  background-color: var(--themeBgSelected,#7D58FF);
  color: #FFFFFF;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
>
  item content content
</div>
`;
